--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anaksingkong/restapi-nodejs.git"
+    "url": "git+https://github.com/anaksingkong/restapi-nodejs.git",
+    "start": "nodemon server.js"
   },
   "keywords": [
     "nodejs",
@@ -27,6 +28,10 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "ip": "^1.1.5",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
